code to prevent scroll in ios

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,3 +31,9 @@
     transform: rotate(360deg);
   }
 }
+
+.modal_img_container {
+  background: #ecedef;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+}
