--- a/src/App.scss
+++ b/src/App.scss
@@ -31,8 +31,7 @@
     transform: rotate(360deg);
   }
 }
-
-.modal_img_container {
+.modal-image-conatiner {
   background: #ecedef;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
